<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Campo de texto para el nombre del Item -->
    <EditText
        android:id="@+id/edit_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/item_name"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Campo de texto para el precio -->
    <EditText
        android:id="@+id/edit_item_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/item_price"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Campo de texto para la cantidad -->
    <EditText
        android:id="@+id/edit_item_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/item_quantity"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Botón para confirmar -->
    <Button
        android:id="@+id/btn_save_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_item"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btn_return_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_home"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="75dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
